BUG 5: Arrumei a configuração do texto da tabela, bem como alinhei a mesma ao centro da página (funções width, margin, e text-align)

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -104,7 +104,9 @@ div:last-child {
 }
 
 table {
-    width: 60%;
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 td button {
